rake is all green

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -9,3 +9,5 @@
 
 
   <%= link_to "Add a review", new_restaurant_review_path(@restaurant)%>
+  <br>
+  <%= link_to "Back to restaurants", restaurants_path(@restaurant)%>
